==> alisongzhu/LightE-F4/components/usmart/usmart.c <==
#include "usmart.h"
#include "usart.h"
#include "tim.h"

void usmart_reset_runtime(void)
{
    __HAL_TIM_CLEAR_FLAG(&htim4,TIM_FLAG_UPDATE);//清除中断标志位
    __HAL_TIM_SET_AUTORELOAD(&htim4,0XFFFF);     //将重装载值设置到最大
    __HAL_TIM_SET_COUNTER(&htim4,0);             //清空定时器的CNT
	usmart_dev.runtime=0;	
}

u32 usmart_get_runtime(void)
{
	if(__HAL_TIM_GET_FLAG(&htim4,TIM_FLAG_UPDATE)==SET)//在运行期间,产生了定时器溢出
	{
		usmart_dev.runtime+=0XFFFF;
	}
	usmart_dev.runtime+=__HAL_TIM_GET_COUNTER(&htim4);
	return usmart_dev.runtime;		//返回计数值
}

void TIM4_IRQHandler(void)
{ 		    		  			       
    if(__HAL_TIM_GET_IT_SOURCE(&htim4,TIM_IT_UPDATE)==SET)//溢出中断
    {
        usmart_dev.scan();	//执行usmart扫描
        __HAL_TIM_SET_COUNTER(&htim4,0);    //清空定时器的CNT
        __HAL_TIM_SET_AUTORELOAD(&htim4,100);//恢复原来的设置
    }
    __HAL_TIM_CLEAR_IT(&htim4, TIM_IT_UPDATE);//清除中断标志位
}

void Timer4_Init(u16 arr,u16 psc)
{ 
    //定时器4
    __HAL_RCC_TIM4_CLK_ENABLE();
    HAL_NVIC_SetPriority(TIM4_IRQn,3,3);    //设置中断优先级，抢占优先级3，子优先级3
    HAL_NVIC_EnableIRQ(TIM4_IRQn);          //开启ITM4中断    
    
    htim4.Instance=TIM4;                          //通用定时器4
    htim4.Init.Prescaler=psc;                     //分频
    htim4.Init.CounterMode=TIM_COUNTERMODE_UP;    //向上计数器
    htim4.Init.Period=arr;                        //自动装载值
    htim4.Init.ClockDivision=TIM_CLOCKDIVISION_DIV1;
    HAL_TIM_Base_Init(&htim4);
    HAL_TIM_Base_Start_IT(&htim4); //使能定时器4和定时器4中断
}
